# CVE_TOOL_SIGMARULE

./: .env  .env.example  .gitignore  pyproject.toml  structure.txt
.cache/cve_responses/: epss__CVE-2013-0942.json  epss__CVE-2013-4365.json  epss__CVE-2019-0708.json  epss__CVE-2021-42287.json  epss__CVE-2021-44228.json  epss__CVE-2022-26923.json  epss__CVE-2023-22515.json  epss__CVE-2023-49103.json  kev__catalog___sites_default_files_feeds_known_exploited_vulnerabilities.json.json  nvd__CVE-2013-0942.json  nvd__CVE-2013-4365.json  nvd__CVE-2019-0708.json  nvd__CVE-2021-42287.json  nvd__CVE-2021-44228.json  nvd__CVE-2022-26923.json  nvd__CVE-2023-22515.json  nvd__CVE-2023-49103.json  nvd__CVE-2024-1234.json  nvd__CVE-FAIL-NVD.json
app/: main.py
app/analysis/: __init__.py  attack_mapper.py  behavior_analyzer.py  cwe_mapper.py  exploit_classifier.py  family_classifier.py  vulnerability_signature_engine.py
app/clients/: base.py  epss_client.py  kev_client.py  nvd_client.py  opencti_client.py
app/core/: config.py  constants.py  exceptions.py  logging.py
app/coverage/: __init__.py  (+4 more)
docs/: CVE-2-Sigma.md  Code cho vào Structuriz.txt  SPEC-AI-ENHANCED.md  Tài liệu thiết kế đặc tả CVE.txt
generated_rules/: CVE-2021-34527.yml  CVE-2021-44228.yml  CVE-2022-22965.yml  CVE-2022-47968.yml  CVE-2023-38831.yml  CVE-2024-3400.yml  CVE-2025-21413.yml  CVE-2025-22723.yml  CVE-UNKNOWN.yml
scratch/: test_otx_api.py  test_otx_cleanup.py  test_otx_filter_logic.py
scripts/: enrich_only.py  fetch_opencti_cves.py  generate_sigma.py  smoke_triage.py  validate_sigma_pipeline.py
(+218 files in other folders)
