[project]
name = "cve-ti-platform"
version = "0.1.0"
description = "CVE Threat Intelligence Platform - Architecture bootstrap (Phase 1)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.99.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.3",
    "pydantic-settings>=2.0",
    "httpx>=0.24.0",
    "structlog>=23.1.0",
    "openai>=1.40.0"
]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# DÁN THÊM CỤC NÀY VÀO DƯỚI CÙNG NÈ MÀY
[tool.hatch.build.targets.wheel]
packages = ["app"]